# WebDoMiner-3.0

./: .gitignore  README.md  pyproject.toml
data/input/: webdominer_sample_input_logistics.txt
examples/: README.md  example_corpus.jsonl  example_failed.jsonl  example_rejected.jsonl  example_summary.json  sample_rs_healthcare.txt
tests/: test_discovery.py  test_keywording.py
webdominer/: __init__.py  cli.py  logging_utils.py  models.py  pipeline.py  settings.py
webdominer/io/: __init__.py  loader.py  writer.py
webdominer/retrieval/: discovery.py  keywording.py  query_builder.py  url_filters.py
webdominer/semantic/: __init__.py  embeddings.py  similarity.py
